--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@types/node": "^12.20.23",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "firebase": "^9.0.1",
+    "firebase": "^8.6.7",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
