--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "firebase": "^8.6.7",
-    "node-sass": "^6.0.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.7"
   }
 }
